syntax = "proto3";

package devkit.v1;

import "buf/validate/validate.proto";

message Setting {
  string setting_key = 1;
  string setting_value = 2;
  string input_type_name = 3;
}

message SettingFindForUpdateRequest {}

message SettingUpdateRequestRow {
  string setting_key = 1 [
  (buf.validate.field).string.min_len = 2,
  (buf.validate.field).string.max_len = 200];  
  string setting_value = 2 [
  (buf.validate.field).string.min_len = 2
  ];  
}

message SettingUpdateRequest {
  repeated SettingUpdateRequestRow settings = 1;
}

message SettingFindForUpdateRow {
  string setting_key = 1;
  string setting_value = 2;
  string input_type = 3;
}
message SettingFindForUpdateResponse {
  repeated SettingFindForUpdateRow settings = 1;
}
message SettingUpdateResponse {}
